--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             font-family: 'Inter', sans-serif; 
             background-color: #f1f5f9;
             color: #1e293b;
+            -webkit-tap-highlight-color: transparent;
         }
 
         @media print {
@@ -53,12 +54,6 @@
         .grid-table input { width: 100%; border: none; outline: none; font-size: 11px; background: transparent; }
 
         .signature-pad { border: 2px solid #e2e8f0; background: #fff; width: 100%; height: 140px; border-radius: 8px; touch-action: none; }
-
-        #loginOverlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(15, 23, 42, 0.95); display: flex; align-items: center;
-            justify-content: center; z-index: 9999; backdrop-filter: blur(8px);
-        }
         
         #toast {
             visibility: hidden; min-width: 250px; background: #1e293b; color: #fff;
@@ -71,33 +66,33 @@
 
         .device-section { display: none; }
         .device-section.active { display: block; }
+
+        .status-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            padding: 4px 10px;
+            border-radius: 99px;
+            font-size: 10px;
+            font-weight: 800;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+        .status-online { background-color: #f0fdf4; color: #166534; border: 1px solid #bbf7d0; }
+        .status-offline { background-color: #fef2f2; color: #991b1b; border: 1px solid #fecaca; }
+        .pulse {
+            width: 8px; height: 8px; border-radius: 50%;
+            background-color: #22c55e;
+            animation: pulse-animation 2s infinite;
+        }
+        @keyframes pulse-animation {
+            0% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(34, 197, 94, 0.7); }
+            70% { transform: scale(1); box-shadow: 0 0 0 6px rgba(34, 197, 94, 0); }
+            100% { transform: scale(0.95); box-shadow: 0 0 0 0 rgba(34, 197, 94, 0); }
+        }
     </style>
 </head>
 <body class="p-0 md:p-4">
-
-    <!-- LOGIN MODAL -->
-    <div id="loginOverlay" class="hidden">
-        <div class="bg-white p-8 rounded-3xl shadow-2xl w-full max-w-sm border-t-[6px] border-red-600 mx-4">
-            <div class="text-center mb-8">
-                <h2 class="text-2xl font-black text-slate-800 uppercase tracking-tighter">Spektra <span class="text-red-600 italic">Cloud</span></h2>
-                <p class="text-[10px] text-slate-400 font-bold mt-1 uppercase">Zabezpečený prístup pre technikov</p>
-            </div>
-            <div class="space-y-4">
-                <input type="email" id="loginEmail" class="input-field" placeholder="Email technika">
-                <input type="password" id="loginPass" class="input-field" placeholder="Heslo">
-                <button id="btnLogin" class="w-full bg-red-600 text-white font-black py-4 rounded-xl hover:bg-slate-800 transition-all uppercase tracking-widest text-xs shadow-lg">Prihlásiť sa</button>
-                <div class="relative flex py-3 items-center">
-                    <div class="flex-grow border-t border-slate-100"></div>
-                    <span class="flex-shrink mx-4 text-slate-300 text-[10px] font-bold">ALEBO</span>
-                    <div class="flex-grow border-t border-slate-100"></div>
-                </div>
-                <button id="btnGoogleLogin" class="w-full bg-white border border-slate-200 text-slate-600 font-bold py-3.5 rounded-xl flex items-center justify-center gap-3 hover:bg-slate-50 transition-all text-xs">
-                    <svg class="w-5 h-5" viewBox="0 0 24 24"><path fill="#EA4335" d="M12 5.04c1.94 0 3.51.68 4.75 1.81l3.55-3.55C18.1 1.31 15.3 0 12 0 7.33 0 3.3 2.69 1.3 6.6l4.13 3.2C6.44 7.07 8.99 5.04 12 5.04z"/><path fill="#4285F4" d="M23.49 12.27c0-.8-.07-1.56-.19-2.3H12v4.51h6.47c-.29 1.48-1.14 2.73-2.4 3.58l3.89 3c2.26-2.09 3.53-5.17 3.53-8.79z"/><path fill="#FBBC05" d="M5.43 14.19c-.24-.72-.37-1.49-.37-2.19 0-.7.13-1.47.37-2.19L1.3 6.6C.47 8.23 0 10.06 0 12c0 1.94.47 3.77 1.3 5.4l4.13-3.21z"/><path fill="#34A853" d="M12 24c3.24 0 5.95-1.08 7.93-2.91l-3.89-3c-1.11.75-2.53 1.19-4.04 1.19-3.01 0-5.56-2.03-6.47-4.76l-4.13 3.21C3.3 21.31 7.33 24 12 24z"/></svg>
-                    Google Prihlásenie
-                </button>
-            </div>
-        </div>
-    </div>
 
     <div id="toast">Správa</div>
 
@@ -109,6 +104,13 @@
                 <div>
                     <h1 class="text-red-600 font-[900] text-4xl italic leading-none tracking-tighter uppercase">SPEKTRA <span class="text-slate-800 font-black">install</span></h1>
                     <p class="text-[10px] font-bold uppercase tracking-[0.2em] text-slate-400 mt-1 italic leading-none">Profesionálne riešenia pre Panasonic Aquarea</p>
+                    <!-- Indikátor prihlásenia -->
+                    <div id="authStatusContainer" class="mt-2 no-print">
+                        <div id="authBadge" class="status-badge status-offline">
+                            <div id="authDot" class=""></div>
+                            <span id="authText">Pripájanie...</span>
+                        </div>
+                    </div>
                 </div>
                 <div class="text-[9px] text-slate-500 md:border-l md:pl-6 border-slate-200 leading-tight">
                     <p class="font-black text-slate-800 uppercase text-[10px]">Spektra install s.r.o.</p>
@@ -223,6 +225,10 @@
                 </div>
             </div>
 
+            <!-- OTHER SECTIONS -->
+            <div id="section-plyn" class="device-section"><div class="section-header">04. Plynový kotol - Merania</div><div class="grid grid-cols-3 gap-2 p-2"><input type="text" id="g_co2" class="input-field" placeholder="CO2 (%)"><input type="text" id="g_co" class="input-field" placeholder="CO (ppm)"><input type="text" id="g_eff" class="input-field" placeholder="Účinnosť (%)"></div></div>
+            <div id="section-elektro" class="device-section"><div class="section-header">04. Elektrický kotol - Merania</div><div class="grid grid-cols-3 gap-2 p-2"><input type="text" id="e_l1" class="input-field" placeholder="L1 (A)"><input type="text" id="e_l2" class="input-field" placeholder="L2 (A)"><input type="text" id="e_l3" class="input-field" placeholder="L3 (A)"></div></div>
+
             <!-- SIGNATURES -->
             <div class="mt-12 grid grid-cols-1 md:grid-cols-2 gap-10 md:gap-16">
                 <div class="flex flex-col items-center">
@@ -250,14 +256,14 @@
                         🖨️ Vytlačiť PDF
                     </button>
                 </div>
-                <button type="button" id="btnLogout" class="text-slate-400 text-[10px] font-bold uppercase hover:text-red-600 underline">Odhlásiť sa</button>
+                <p class="text-[8px] text-slate-400 font-black uppercase tracking-[0.4em]">Spektra install v4.1 | Direct Access</p>
             </div>
         </form>
     </div>
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getAuth, signInAnonymously, onAuthStateChanged, signInWithCustomToken } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, setDoc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
         const firebaseConfig = JSON.parse(__firebase_config);
@@ -268,25 +274,54 @@
 
         let user = null;
 
-        onAuthStateChanged(auth, (u) => {
-            user = u;
-            if (u) document.getElementById('loginOverlay').classList.add('hidden');
-            else document.getElementById('loginOverlay').classList.remove('hidden');
+        // Auto Anonymous Auth
+        const initAuth = async () => {
+            try {
+                if (typeof __initial_auth_token !== 'undefined' && __initial_auth_token) {
+                    await signInWithCustomToken(auth, __initial_auth_token);
+                } else {
+                    await signInAnonymously(auth);
+                }
+            } catch (e) {
+                console.error("Auth error", e);
+                updateAuthUI(false);
+                showToast("Chyba cloudu. Skontrolujte pripojenie.");
+            }
+        };
+
+        function updateAuthUI(isLoggedIn) {
+            const badge = document.getElementById('authBadge');
+            const dot = document.getElementById('authDot');
+            const text = document.getElementById('authText');
+
+            if (isLoggedIn) {
+                badge.className = "status-badge status-online";
+                dot.className = "pulse";
+                text.innerText = "Cloud aktívny";
+            } else {
+                badge.className = "status-badge status-offline";
+                dot.className = "";
+                text.innerText = "Cloud odpojený";
+            }
+        }
+
+        onAuthStateChanged(auth, (u) => { 
+            user = u; 
+            if (u) {
+                updateAuthUI(true);
+                // Len pri prvom prihlásení v relácii ukážeme toast
+                if (!window.initialToastShown) {
+                    showToast("Pripojené ku cloudu.");
+                    window.initialToastShown = true;
+                }
+            } else {
+                updateAuthUI(false);
+            }
         });
 
-        document.getElementById('btnLogin').onclick = async () => {
-            try { await signInWithEmailAndPassword(auth, document.getElementById('loginEmail').value, document.getElementById('loginPass').value); }
-            catch (e) { showToast("❌ Prihlásenie zlyhalo."); }
-        };
+        initAuth();
 
-        document.getElementById('btnGoogleLogin').onclick = async () => {
-            try { await signInWithPopup(auth, new GoogleAuthProvider()); }
-            catch (e) { showToast("❌ Google prihlásenie zlyhalo. Skontrolujte nastavenia v Firebase konzole."); }
-        };
-
-        document.getElementById('btnLogout').onclick = () => signOut(auth);
-
-        // Pad logic
+        // Signature logic
         const pads = {};
         function initPad(id) {
             const canvas = document.getElementById(id);
@@ -312,23 +347,23 @@
 
         // Cloud Actions
         document.getElementById('btnSave').onclick = async () => {
-            if (!user) return showToast("Musíte sa prihlásiť!");
+            if (!user) return showToast("Pripájam sa ku cloudu...");
             const pId = document.getElementById('protocolId').value.trim();
-            showToast("Ukladám dáta...");
+            showToast("Ukladám...");
             const data = {
-                metadata: { protocolId: pId, type: document.getElementById('deviceSelector').value, ts: new Date().toISOString(), user: user.email },
+                metadata: { protocolId: pId, type: document.getElementById('deviceSelector').value, ts: new Date().toISOString() },
                 content: {},
                 signatures: { cust: pads['customerSignature'].canvas.toDataURL(), tech: pads['technicianSignature'].canvas.toDataURL() }
             };
             document.querySelectorAll('input, select').forEach(el => { 
-                if(el.id && el.id !== 'protocolId' && !el.id.includes('login')) {
+                if(el.id && el.id !== 'protocolId') {
                     data.content[el.id] = el.type === 'checkbox' ? el.checked : el.value;
                 }
             });
             try {
                 await setDoc(doc(db, 'artifacts', appId, 'public', 'data', 'protocols', pId), data);
-                showToast("✅ Protokol úspešne uložený!");
-            } catch (e) { showToast("❌ Chyba: Skontrolujte Rules vo Firebase!"); }
+                showToast("✅ Uložené!");
+            } catch (e) { showToast("❌ Chyba pri ukladaní."); }
         };
 
         document.getElementById('btnLoad').onclick = async () => {
@@ -342,7 +377,7 @@
                 }
                 restoreSignature('customerSignature', data.signatures.cust);
                 restoreSignature('technicianSignature', data.signatures.tech);
-                showToast("✅ Dáta načítané!");
+                showToast("✅ Načítané!");
             }
         };
 
@@ -376,7 +411,7 @@
         };
 
         async function fetchFromCloud() {
-            if (!user) return showToast("Prihláste sa!");
+            if (!user) return showToast("Pripájam sa...");
             const pId = document.getElementById('protocolId').value.trim();
             try {
                 const snap = await getDoc(doc(db, 'artifacts', appId, 'public', 'data', 'protocols', pId));
